# superpowered-ndk-example

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/superpoweredsample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: SuperpoweredExample.cpp  SuperpoweredExample.h  native-lib.cpp
app/src/main/java/com/example/superpoweredsample/: MainActivity.java
app/src/main/res/drawable/: ic_fast_forward_black_24dp.xml  ic_fast_rewind_black_24dp.xml  ic_pause_black_24dp.xml  ic_pause_circle_outline_black_24dp.xml  ic_play_circle_outline_black_24dp.xml  ic_skip_next_black_24dp.xml  ic_skip_previous_black_24dp.xml
app/src/main/res/drawable-anydpi/: ic_play_arrow.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/superpoweredsample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
